src/objects/Time_Study_Log__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <description>Pick a category. this is a dependent pick list</description>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Sales Prep</fullName>
                </value>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Admin Work</fullName>
                </value>
                <value>
                    <fullName>Traveling</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Salesforce Updates</fullName>
                </value>
                <value>
                    <fullName>PTO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <label>Day</label>
        <referenceTo>Day__c</referenceTo>
        <relationshipLabel>Time Study Logs</relationshipLabel>
        <relationshipName>Time_Study_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>IF(FLOOR((End__c - Start__c) / 24) &lt; 10, &quot;0&quot; &amp; 
TEXT(FLOOR((End__c - Start__c) / 24)), 
TEXT(FLOOR((End__c - Start__c) / 24))) &amp; &quot;:&quot; &amp; 
IF(MOD(ROUND((End__c - Start__c) * 1440, 0), 60) &lt; 10, &quot;0&quot; &amp; 
TEXT(MOD(ROUND((End__c - Start__c) * 1440, 0), 60)), 
TEXT(MOD(ROUND((End__c - Start__c) * 1440, 0), 60))) &amp; &quot;:&quot; &amp; 
IF(MOD(ROUND((End__c - Start__c) * 86400, 0), 60) &lt; 10, &quot;0&quot; &amp; 
TEXT(MOD(ROUND((End__c - Start__c) * 86400, 0), 60)), 
TEXT(MOD(ROUND((End__c - Start__c) * 86400, 0), 60)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>When did activity end</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <description>How many hours did activity take</description>
        <label>Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minutes__c</fullName>
        <description>How many minutes did activity take</description>
        <label>Minutes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Please_specify__c</fullName>
        <label>Please specify</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Meeting – Online/Phone</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>WEX_Meeting</fullName>
                    <label>WEX Meeting</label>
                </value>
                <value>
                    <fullName>1 on 1/Manager Meeting</fullName>
                </value>
                <value>
                    <fullName>Developing presentations</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>IT Help Desk</fullName>
                </value>
                <value>
                    <fullName>Purchasing office supplies</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Driving</fullName>
                </value>
                <value>
                    <fullName>Flying</fullName>
                </value>
                <value>
                    <fullName>Implementation support</fullName>
                </value>
                <value>
                    <fullName>Tenured  customer support</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>New Customer</fullName>
                </value>
                <value>
                    <fullName>Existing Customer</fullName>
                </value>
                <value>
                    <fullName>Forecasting</fullName>
                </value>
                <value>
                    <fullName>Logging Activities</fullName>
                </value>
                <value>
                    <fullName>Submitting Applications</fullName>
                </value>
                <value>
                    <fullName>Updating Opportunities</fullName>
                </value>
                <value>
                    <fullName>Adding new leads</fullName>
                </value>
                <value>
                    <fullName>Research/Prework</fullName>
                </value>
                <value>
                    <fullName>Analytics post meeting</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>System Login/VPN</fullName>
                </value>
                <value>
                    <fullName>BW/Distributor/Partner</fullName>
                </value>
                <value>
                    <fullName>Sales Meeting – In-person</fullName>
                </value>
                <value>
                    <fullName>Drop-in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>When did activity start</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Duration__c</fullName>
        <formula>TEXT(Hours__c) &amp; &apos;:&apos; &amp; TEXT(Minutes__c) &amp; &apos; mins&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Duration</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>My_Time_Logs_Today</fullName>
        <columns>Total_Duration__c</columns>
        <columns>Category__c</columns>
        <columns>Please_specify__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>My Time Logs Today</label>
    </listViews>
    <listViews>
        <fullName>My_Time_Study_Logs</fullName>
        <columns>Day__c</columns>
        <columns>NAME</columns>
        <columns>Total_Duration__c</columns>
        <columns>Category__c</columns>
        <columns>Please_specify__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Time Study Logs</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>